# stpsher

./: .dockerignore  .env.dist  .gitignore  Dockerfile  bot.py  docker-compose.yml  pyproject.toml  qodana.yaml  requirements.txt
.github/workflows/: docker-release.yml  ruff-checks.yml
infrastructure/: __init__.py
infrastructure/api/: __init__.py  production_calendar.py
infrastructure/database/: setup.py
infrastructure/database/models/: __init__.py  achievement.py  award.py  base.py  schedule_log.py  user.py  user_achievement.py  user_award.py
infrastructure/database/repo/: achievement.py  award.py  base.py  requests.py  schedule_log.py  user.py  user_achievement.py  user_award.py  users.py
infrastructure/migrations/: env.py
infrastructure/migrations/versions/: create_achievements.py  create_broadcasts.py  create_kpiday.py  (+10 more)
tests/game/: test_leveling.py
tgbot/: config.py
tgbot/filters/: admin.py  casino.py  deep.py  group.py  group_casino.py  role.py
tgbot/handlers/: __init__.py  auth.py  cmds.py  deeplinks.py  exchange_reschedule.py  start.py  user.py  whois.py
tgbot/keyboards/: auth.py  inline.py  schedule.py
tgbot/middlewares/: AccessMiddleware.py  ConfigMiddleware.py  DatabaseMiddleware.py  EventLoggingMiddleware.py  GroupsMiddleware.py  UsersMiddleware.py
tgbot/misc/: constants.py  dicts.py  helpers.py
tgbot/services/: __init__.py  broadcaster.py  event_logger.py  exchange_stats.py  leveling.py  logger.py  mailing.py  scheduler.py  search.py  sheets.py
uploads/: ГРАФИК НТП1 II 2025.xlsx  ГРАФИК НТП2 II 2025.xlsx  ГРАФИК НЦК II 2025.xlsx
(+474 files in other folders)
