[project]
name = "stpsherbot"
version = "0.1.0"
description = "Бот-помощник СТП"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "aiogram-dialog>=2.4.0",
    "aiomysql>=0.2.0",
    "alembic==1.16.5",
    "apscheduler>=3.11.0",
    "betterlogging>=1.0.0",
    "databases>=0.9.0",
    "environs>=14.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "redis>=6.3.0",
    "requests>=2.32.5",
    "sqlalchemy==2.0.43",
]
